Security enhancements at transport layer
