# docs/swagger.json
@@ -4,6 +4,10 @@
         "description": "Authentication/Authorization Service",
         "title": "Sentinel",
         "contact": {},
+        "license": {
+            "name": "AGPL-3.0 (With additional terms, see NOTICE file)",
+            "url": "https://www.gnu.org/licenses/agpl-3.0.html"
+        },
         "version": "1.0"
     },
     "basePath": "/",
@@ -115,6 +119,14 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
+                    }
+                ],
                 "description": "Create new access and refresh tokens and update current session info",
                 "consumes": [
                     "application/json"
@@ -173,6 +185,14 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
+                    }
+                ],
                 "description": "Login endpoint",
                 "consumes": [
                     "application/json"
@@ -251,6 +271,12 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
                     }
                 ],
                 "description": "Logout endpoint",
@@ -291,6 +317,36 @@
                                 "type": "string",
                                 "description": "Set to 'true' when token refresh is required"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/responsebody.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/csrf-token": {
+            "get": {
+                "description": "Generates CSRF token and sets correspond \"_csrf\" cookie",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Get CSRF token",
+                "operationId": "get-csrf-token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responsebody.CSRF"
                         }
                     },
                     "500": {
@@ -365,6 +421,12 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
                     }
                 ],
                 "description": "Revoke all existing non-revoked sessions",
@@ -448,6 +510,12 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
                     }
                 ],
                 "description": "Logout endpoint",
@@ -513,6 +581,12 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
                     }
                 ],
                 "description": "Delete all cache. Only users with \"admin\" role can do that, even if they have enough permission to do that",
@@ -641,6 +715,12 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
                     }
                 ],
                 "description": "Bulk restore soft deleted users",
@@ -772,6 +852,12 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
                     }
                 ],
                 "description": "Bulk user soft delete. All sessions of soft deleted users will be revoked",
@@ -955,6 +1041,12 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
                     }
                 ],
                 "description": "Hard delete all soft deleted users",
@@ -1291,6 +1383,12 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
                     }
                 ],
                 "description": "Soft delete user. All sessions of soft deleted user will be revoked",
@@ -1374,6 +1472,12 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
                     }
                 ],
                 "description": "Hard delete user. Only soft deleted users can be hard deleted",
@@ -1457,6 +1561,12 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
                     }
                 ],
                 "description": "Change user login",
@@ -1557,6 +1667,12 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
                     }
                 ],
                 "description": "Change user password",
@@ -1657,6 +1773,12 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
                     }
                 ],
                 "description": "Restore soft delete user",
@@ -1827,6 +1949,12 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "CSRF_Header": []
+                    },
+                    {
+                        "CSRF_Cookie": []
                     }
                 ],
                 "description": "Change user roles",
@@ -2147,6 +2275,15 @@
                 "reason": {
                     "type": "string",
                     "example": "Violation of terms of use"
+                }
+            }
+        },
+        "responsebody.CSRF": {
+            "type": "object",
+            "properties": {
+                "csrf-token": {
+                    "type": "string",
+                    "example": "h3PCI++3T0fEphsWoupOQyIQjlOx953bF0wlhMNu1jw="
                 }
             }
         },
@@ -2478,9 +2615,21 @@
     },
     "securityDefinitions": {
         "BearerAuth": {
-            "description": "Bearer token format: Bearer \u003cYOUR_TOKEN\u003e",
+            "description": "Bearer token format: Bearer \u003caccess_token\u003e",
             "type": "apiKey",
             "name": "Authorization",
+            "in": "header"
+        },
+        "CSRF_Cookie": {
+            "description": "CSRF token in cookie. Required for state-changing requests, must match with token in X-CSRF-Token header",
+            "type": "apiKey",
+            "name": "_csrf",
+            "in": "cookie"
+        },
+        "CSRF_Header": {
+            "description": "CSRF token in request header. Required for state-changing requests, must match with token in cookie",
+            "type": "apiKey",
+            "name": "X-CSRF-Token",
             "in": "header"
         }
     }
